# drills

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  drills.cpp
include/: drillheader.h
math/: integers.cpp
multithreading/: compareandswap.cpp
sorting/: sorting.cpp
string/: string.cpp
system/: compareandswap.cpp
two-pointers/: two_pointers.cpp
